[package]

name = "rust_accel_mma84"
version = "0.0.1"
authors = ["johnnyman727 <johnnyman727@gmail.com>","Kenneth Nierenhausen <kennethnierenhausen@gmail.com>"]

[dependencies]
unix_socket = "0.2.3"

[dependencies.rust_tessel]
git = "https://github.com/flaki/tessel-rust.git"
#path = "../rust-tessel"
